--- a/app-frontend/src/app/main-page/main-page.component.scss
+++ b/app-frontend/src/app/main-page/main-page.component.scss
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family:'Poppins', sans-serif;
   box-sizing: border-box;
 }
 
@@ -75,7 +75,7 @@ position: relative;
   content: '';
   width: 7px;
   height: 7px;
-  border: 7px solid #fff;
+  border: 4px solid #fff;
   border-radius: 50%;
   right: 0;
   top: 0;
@@ -135,6 +135,7 @@ position: relative;
   text-align: center;
   margin: 12px 0;
   font-size: 12px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .sidebar-ad img {
@@ -168,7 +169,9 @@ position: relative;
   font-weight: 500;
   margin: 20px auto 10px;
 }
-
+.team {
+  cursor: pointer;
+}
 .sidebar-useful-links {
   padding: 15px 25px;
   text-align: center;
@@ -286,6 +289,10 @@ top: 73px;
 
 .profile-container {
   background-color: #fff;
+  padding: 20px 4% 30px;
+  
+  position: relative;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .profile-container-inner {
@@ -295,7 +302,7 @@ top: 73px;
 .profile-pic {
   width: 150px;
   border-radius: 50%;
-  margin-top: 5px;
+  margin-top: -75px;
   padding: 5px;
   background: #fff;
 }
@@ -317,6 +324,8 @@ top: 73px;
 .profile-container p a {
   color: #ff0000;
 }
+
+
 
 .profile-description {
   background: #fff;
@@ -420,6 +429,7 @@ top: 73px;
   padding: 15px 25px;
   margin: 12px 0;
   font-size: 12px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .sidebar-people h3 {
@@ -438,7 +448,7 @@ top: 73px;
   width: 40px;
   border-radius: 50%;
   margin-right: 8px ;
-  margin-top: 5px;
+  margin-top: -35px;
 }
 
 .sidebar-people-row h2 {
@@ -467,6 +477,8 @@ top: 73px;
 .profile-footer .copyright-msg {
  justify-content: flex-start;
 }
+
+
 
 /* -------------------- media query for small screens ------------------- */
 @media only screen and (max-width: 600px) {
