--- a/app-frontend/src/app/user/user-add/user-add.component.html
+++ b/app-frontend/src/app/user/user-add/user-add.component.html
@@ -1,1 +1,49 @@
 <p>user-add works!</p>
+<nav class="navbar">
+  <div class="navbar-left">
+    <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
+  </div>
+  <div class="navbar-center">
+    <ul>
+      <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png" alt="Home"> <span>Home</span></a></li>
+      <li><a [routerLink]="['/project-add']"><img src="/images/network.png" alt="Project Add"> <span>Stwórz projekt</span></a></li>
+      <li><a [routerLink]="['/team-add']"><img src="/images/jobs.png" alt="Team Add"> <span>Przydzielanie zespołów</span></a></li>
+      <li><a [routerLink]="['/team-edit']"><img src="/images/message.png" alt="Team Edit"> <span>Użytkownicy</span></a></li>
+      <li><a [routerLink]="['/login']"><img src="/images/notification.png" alt="Notifications"> <span>Coś tam</span></a></li>
+    </ul>
+  </div>
+  <div class="navbar-right">
+    <div class="user-structure">
+      <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['user-view']" alt="Profile">
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="main">
+    <div class="form-container">
+      <h1>Wypełnij profil</h1>
+      <form>
+        <div class="form-group">
+          <label for="user-name">Imię i nazwisko</label>
+          <input type="text" id="user-name" placeholder="Wpisz imię i nazwisko" >
+        </div>
+        <div class="form-group">
+          <label for="user-email">Adres e-mail</label>
+          <input type="email" id="user-email" placeholder="Wpisz adres e-mail" >
+        </div>
+        <div class="form-group">
+          <label for="user-password">Hasło</label>
+          <input type="password" id="user-password" placeholder="Wpisz swoje hasło">
+        </div>
+        <div class="form-group">
+          <label for="user-bio">Bio</label>
+          <textarea id="user-bio" placeholder="Napisz coś o sobie..."></textarea>
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn">Zapisz zmiany</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
