user view, project view, login page fix, main page fix, validation in progress

--- a/app-frontend/src/app/main-page/main-page.component.html
+++ b/app-frontend/src/app/main-page/main-page.component.html
@@ -6,10 +6,10 @@
   <div class="navbar-center">
     <ul>
       <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
-      <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>zespoły</span></a></li>
-      <li><a [routerLink]="['/project-add']"><img src="/images/jobs.png"> <span>stwórz projekt</span></a></li>
-      <li><a [routerLink]="['']"><img src="/images/message.png"> <span></span></a></li>
-      <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>logowanie</span></a></li>
+      <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
+      <li><a (click)="verifyUser()"><img src="/images/jobs.png"> <span>Create a Project</span></a></li>
+      <li><a [routerLink]="['']"><img src="/images/message.png"> <span>Your comments</span></a></li>
+      <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
     </ul>
   </div>
   <div class="navbar-right">
@@ -73,8 +73,8 @@
         <h1>Your personal project manager.</h1>
         <b>you can see and edit your teams and projects.</b>
         <p>your team:</p>
-        <p [routerLink]="['/team-view']">{{userData.team.name}}:</p>
-        <p *ngFor="let user of teamData.users">
+        <p [routerLink]="[`/team-view/${teamData?.id}`]">{{teamData?.name}}:</p>
+        <p *ngFor="let user of teamData?.users">
           - {{user.name}}
         </p>
       </div>
@@ -82,7 +82,7 @@
 
 <div *ngFor="let project of projectsData" class="profile-description">
   <h2>{{project.name}}</h2>
-  <h4>deadline: {{project.deadline}}</h4>
+  <h4>deadline: {{project.deadline | date:'yyyy-MM-dd' }}</h4>
   <ul>
     <p>tasks:</p>
     <p *ngFor="let task of project.tasks">
@@ -94,7 +94,7 @@
       - {{team.name}}
     </p>
   </ul>
-  <a [routerLink]="['/project-view']" class="see-more-link">See more...</a>
+  <a [routerLink]="[`/project-view/${project.id}`]" class="see-more-link">See more...</a>
 </div>
 
 <div class="profile-description">
