--- a/app-frontend/src/app/project/project-view/project-view.component.scss
+++ b/app-frontend/src/app/project/project-view/project-view.component.scss
@@ -74,19 +74,19 @@ ul li::before {
   height: 28px;
   width: 28px;
   border-radius: 50%;
-  background-image: url();
   background-size: cover;
   background-position: center;
   top: 12px;
   left: 8px;
 }
 
-ul li.checked {
+.checked {
 color: #555;
 text-decoration: line-through;
 }
-ul li.checked::before {
-  background-image:  url();
+
+.in-progress {
+  text-decoration: underline;
 }
 
 ul li span {
