--- a/app-frontend/src/app/user/user-add/user-add.component.html
+++ b/app-frontend/src/app/user/user-add/user-add.component.html
@@ -1,15 +1,14 @@
-<p>user-add works!</p>
 <nav class="navbar">
   <div class="navbar-left">
     <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
   </div>
   <div class="navbar-center">
     <ul>
-      <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png" alt="Home"> <span>Home</span></a></li>
-      <li><a [routerLink]="['/project-add']"><img src="/images/network.png" alt="Project Add"> <span>Stwórz projekt</span></a></li>
-      <li><a [routerLink]="['/team-add']"><img src="/images/jobs.png" alt="Team Add"> <span>Przydzielanie zespołów</span></a></li>
-      <li><a [routerLink]="['/team-edit']"><img src="/images/message.png" alt="Team Edit"> <span>Użytkownicy</span></a></li>
-      <li><a [routerLink]="['/login']"><img src="/images/notification.png" alt="Notifications"> <span>Coś tam</span></a></li>
+      <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
+      <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
+      <li><a (click)="verifyPP()"><img src="/images/jobs.png"> <span>Create a Project</span></a></li>
+      <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Your comments</span></a></li>
+      <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
     </ul>
   </div>
   <div class="navbar-right">
@@ -22,35 +21,32 @@
 <div class="container">
   <div class="main">
     <div class="form-container">
-      <h1>Wypełnij profil</h1>
+      <h1>Add profile</h1>
       <form>
         <div class="form-group">
-          <label for="user-name">Imię i nazwisko</label>
-          <input type="text" id="user-name" placeholder="Wpisz imię i nazwisko" >
+          <label for="user-name">Name</label>
+          <input [(ngModel)]="addName" [ngModelOptions]="{standalone: true}" type="text" id="user-name" placeholder="Your Name" value="Jan Kowalski">
         </div>
         <div class="form-group">
-          <label for="user-email">Adres e-mail</label>
-          <input type="email" id="user-email" placeholder="Wpisz adres e-mail" >
+          <label for="user-username">Username</label>
+          <input [(ngModel)]="addUsername" [ngModelOptions]="{standalone: true}" type="text" id="user-username" placeholder="Your Username" value="Jan Kowalski">
         </div>
         <div class="form-group">
-          <label for="user-password">Hasło</label>
-          <input type="password" id="user-password" placeholder="Wpisz swoje hasło">
+          <label for="user-password">Nowe hasło</label>
+          <input [(ngModel)]="addPassword" [ngModelOptions]="{standalone: true}" type="password" id="user-password" placeholder="Your Password">
         </div>
         <div class="form-group">
-          <label for="user-bio">Bio</label>
-          <textarea id="user-bio" placeholder="Napisz coś o sobie..."></textarea>
+          <label for="user-email">e-mail address</label>
+          <input [(ngModel)]="addEmail" [ngModelOptions]="{standalone: true}" type="email" id="user-email" placeholder="Your e-mail">
         </div>
         <div class="form-group">
-          <button type="submit" class="btn">Zapisz zmiany</button>
+          <label for="user-rank">Rank</label>
+          <input [(ngModel)]="addRank" [ngModelOptions]="{standalone: true}" type="text" id="user-rank" placeholder="Your Rank" value="Jan Kowalski">
+        </div>
+        <div class="form-group">
+          <button (click)="addUser()" type="submit" class="btn">Add User</button>
         </div>
       </form>
     </div>
   </div>
 </div>
-<!-- <input type="text" placeholder="name" [(ngModel)]="addName" [ngModelOptions]="{standalone: true}">
-<input type="text" placeholder="username" [(ngModel)]="addUsername" [ngModelOptions]="{standalone: true}">
-<input type="text" placeholder="password" [(ngModel)]="addPassword" [ngModelOptions]="{standalone: true}">
-<input type="text" placeholder="email" [(ngModel)]="addEmail" [ngModelOptions]="{standalone: true}">
-<input type="text" placeholder="rank" [(ngModel)]="addRank" [ngModelOptions]="{standalone: true}">
-<button (click)="addUser()">Add new User</button>
-<p>{{result}}</p> -->
