--- a/app-frontend/src/app/user/user-edit/user-edit.component.html
+++ b/app-frontend/src/app/user/user-edit/user-edit.component.html
@@ -1,22 +1,14 @@
-<input type="number" placeholder="id" [(ngModel)]="userId" [ngModelOptions]="{standalone: true}">
-<input type="text" placeholder="name" [(ngModel)]="newName" [ngModelOptions]="{standalone: true}">
-<input type="text" placeholder="username" [(ngModel)]="newUsername" [ngModelOptions]="{standalone: true}">
-<input type="text" placeholder="password" [(ngModel)]="newPassword" [ngModelOptions]="{standalone: true}">
-<input type="text" placeholder="email" [(ngModel)]="newEmail" [ngModelOptions]="{standalone: true}">
-<input type="text" placeholder="rank" [(ngModel)]="newRank" [ngModelOptions]="{standalone: true}">
-<button (click)="update()">update</button>
-<!-- tu będzie można edytowwać swój profil-->
 <nav class="navbar">
   <div class="navbar-left">
     <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
   </div>
   <div class="navbar-center">
     <ul>
-      <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png" alt="Home"> <span>Home</span></a></li>
-      <li><a [routerLink]="['/project-add']"><img src="/images/network.png" alt="Project Add"> <span>Stwórz projekt</span></a></li>
-      <li><a [routerLink]="['/team-add']"><img src="/images/jobs.png" alt="Team Add"> <span>Przydzielanie zespołów</span></a></li>
-      <li><a [routerLink]="['/team-edit']"><img src="/images/message.png" alt="Team Edit"> <span>Użytkownicy</span></a></li>
-      <li><a [routerLink]="['/login']"><img src="/images/notification.png" alt="Notifications"> <span>Coś tam</span></a></li>
+      <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
+      <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
+      <li><a (click)="verifyPP()"><img src="/images/jobs.png"> <span>Create a Project</span></a></li>
+      <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Your comments</span></a></li>
+      <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
     </ul>
   </div>
   <div class="navbar-right">
@@ -32,23 +24,23 @@
       <h1>Edytuj profil</h1>
       <form>
         <div class="form-group">
-          <label for="user-name">Imię i nazwisko</label>
-          <input type="text" id="user-name" placeholder="Wpisz imię i nazwisko" value="Jan Kowalski">
+          <label for="user-name">Name</label>
+          <input [(ngModel)]="newName" [ngModelOptions]="{standalone: true}" type="text" id="user-name" placeholder="Your new Name" value="Jan Kowalski">
         </div>
         <div class="form-group">
-          <label for="user-email">Adres e-mail</label>
-          <input type="email" id="user-email" placeholder="Wpisz adres e-mail" value="jan.kowalski@email.com">
+          <label for="user-username">Username</label>
+          <input [(ngModel)]="newUsername" [ngModelOptions]="{standalone: true}" type="text" id="user-username" placeholder="Your new  Username" value="Jan Kowalski">
         </div>
         <div class="form-group">
           <label for="user-password">Nowe hasło</label>
-          <input type="password" id="user-password" placeholder="Wpisz nowe hasło">
+          <input [(ngModel)]="newPassword" [ngModelOptions]="{standalone: true}" type="password" id="user-password" placeholder="Your new Password">
         </div>
         <div class="form-group">
-          <label for="user-bio">Bio</label>
-          <textarea id="user-bio" placeholder="Napisz coś o sobie..."></textarea>
+          <label for="user-email">e-mail address</label>
+          <input [(ngModel)]="newEmail" [ngModelOptions]="{standalone: true}" type="email" id="user-email" placeholder="Your new e-mail">
         </div>
         <div class="form-group">
-          <button type="submit" class="btn">Zapisz zmiany</button>
+          <button (click)="update()" type="submit" class="btn">Save changes</button>
         </div>
       </form>
     </div>
