all user functionality finished

--- a/app-frontend/src/app/user/user-view/user-view.component.html
+++ b/app-frontend/src/app/user/user-view/user-view.component.html
@@ -39,8 +39,7 @@
 
       <div class="team-details">
         <ul>
-            <li><h3>{{teamData?.name}}</h3></li>
-            <li *ngFor="let user of teamData?.users">{{user.name}}</li>
+            <h3>{{userData.team?.name}}</h3>
         </ul>
       </div>
       
