--- a/app-frontend/src/app/user/user-add/user-add.component.html
+++ b/app-frontend/src/app/user/user-add/user-add.component.html
@@ -45,6 +45,7 @@
         </div>
         <div class="form-group">
           <button (click)="addUser()" type="submit" class="btn">Add User</button>
+          <p>{{result}}</p>
         </div>
       </form>
     </div>
