--- a/app-frontend/src/app/user/user-edit/user-edit.component.html
+++ b/app-frontend/src/app/user/user-edit/user-edit.component.html
@@ -21,7 +21,7 @@
 <div class="container">
   <div class="main">
     <div class="form-container">
-      <h1>Edytuj profil</h1>
+      <h1>Edit profile</h1>
       <form>
         <div class="form-group">
           <label for="user-name">Name</label>
@@ -41,6 +41,7 @@
         </div>
         <div class="form-group">
           <button (click)="update()" type="submit" class="btn">Save changes</button>
+          <p>{{result}}</p>
         </div>
       </form>
     </div>
