updated login scss and comment-list html/scss

--- a/app-frontend/src/app/comment-list/comment-list.component.html
+++ b/app-frontend/src/app/comment-list/comment-list.component.html
@@ -1,1 +1,103 @@
 <p>comment-list works!</p>
+<!--<nav class="navbar">
+  <div class="navbar-left">
+    <a href="main-page.component.html" class="logo"><img src="/images/logo.png"></a>
+
+  </div>
+  <div class="navbar-center">
+    <ul>
+      <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
+      <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
+      <li><a (click)="verifyPP()"><img src="/images/jobs.png"> <span>Create a Project</span></a></li>
+      <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Your comments</span></a></li>
+      <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
+    </ul>
+  </div>
+  <div class="navbar-right">
+   <div class="user-structure">
+   
+    <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['user-view']">
+   
+   </div>
+  </div>
+-->
+<!----------- ------ profile menu --onclick="toggleMenu()"--------  id="profileMenu"--->
+<!--
+<div class="profile-menu-wrap">
+  <div class="profile-menu">
+    <div class="user-info">
+      <img src="/images/logo.png">
+      <div>
+        <h3>Lorem, ipsum dolor.</h3>
+        <a href="#">See your profile</a>
+      </div>
+    </div>
+    <hr>
+    <a href="#" class="profile-menu-link">
+      <img src="">
+      <p>Give Feedback</p>
+      <span>></span>
+    </a>
+    <a href="#" class="profile-menu-link">
+      <img src="">
+      <p>Settings & Privacy</p>
+      <span>></span>
+    </a>
+    <a href="#" class="profile-menu-link">
+      <img src="">
+      <p>Help & Support</p>
+      <span>></span>
+    </a>
+    <a href="#" class="profile-menu-link">
+      <img src="">
+      <p>Display & Accessibility</p>
+      <span>></span>
+    </a>
+    <a href="#" class="profile-menu-link">
+      <img src="">
+      <p>Logout</p>
+      <span>></span>
+    </a>
+  </div>
+</div>
+
+</nav>
+
+<div class="container">
+  <div class="main">
+    <div class="comments-section">
+      <h1>Komentarze</h1>
+      <div class="comment-form">
+        <textarea id="comment-text" placeholder="Dodaj komentarz..."></textarea>
+        <button class="btn">Dodaj</button>
+      </div>
+      <div class="comment-list">
+        <div class="comment">
+          <img src="" class="comment-avatar" alt="User">
+          <div class="comment-content">
+            <h3>Jan Kowalski</h3>
+            <p>Świetny projekt! Podoba mi się podejście do UX.</p>
+            <small>2 godziny temu</small>
+          </div>
+        </div>
+        <div class="comment">
+          <img src="" class="comment-avatar" alt="User">
+          <div class="comment-content">
+            <h3>Anna Nowak</h3>
+            <p>Fajna inicjatywa! Kiedy planujecie premierę?</p>
+            <small>3 godziny temu</small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="first-sidebar">
+    <div class="sidebar-ad">
+      <small>Reklama</small>
+      <p>Sprawdź naszą nową ofertę!</p>
+      <b>Promocja tylko dziś</b>
+      <a href="#" class="ad-link">Dowiedz się więcej</a>
+    </div>
+  </div>
+</div>
+-->
