--- a/app-frontend/src/app/login-page/login-page.component.scss
+++ b/app-frontend/src/app/login-page/login-page.component.scss
@@ -78,10 +78,12 @@ form .join-btn {
     background-color: #FF0000;
     color: #fff;
     font-size: 1rem;
-    transition: 100ms ease-in-out background-color;
+    //transition: 100ms ease-in-out background-color;
+    transition: all .5s ease;
 }
 form .join-btn:hover {
-    background-color: #FF0000;
+    background-color: #B20000;
+    box-shadow: 0 0 10px #000;
 }
 .separator {
     display: flex;
@@ -168,6 +170,8 @@ footer > * {
 footer > *:hover {
     color: #FF0000;
 }
+// test: 
+
 
 /*@media only screen and (max-width: 600px) {
   body {
