--- a/app-frontend/src/app/project/project-view/project-view.component.scss
+++ b/app-frontend/src/app/project/project-view/project-view.component.scss
@@ -122,7 +122,7 @@ ul li span:hover {
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family:'Poppins', sans-serif;
   box-sizing: border-box;
 }
 
