--- a/app-frontend/src/app/user/user-view/user-view.component.html
+++ b/app-frontend/src/app/user/user-view/user-view.component.html
@@ -28,12 +28,11 @@
           <img src="/images/logo.png" alt="Profile Picture" class="profile-img">
         </div>
         <div class="profile-details">
-          <ul>
-            <li><h2>{{userData?.name}}</h2></li>
-            <li>{{userData?.username}}</li>
-            <li>{{userData?.email}}</li>
-            <li>{{userData?.rank}}</li>
-          </ul>
+            <h2>{{userData?.name}}</h2>
+           <p> {{userData?.username}}</p>
+           <p> {{userData?.email}}</p>
+           <p> {{userData?.rank}}</p>
+          
         </div>
       </div>
 
