--- a/app-frontend/src/app/team/team-view/team-view.component.scss
+++ b/app-frontend/src/app/team/team-view/team-view.component.scss
@@ -2,7 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family:'Poppins', sans-serif;
   box-sizing: border-box;
 }
 
@@ -89,7 +89,7 @@ a {
 
 /* Main container */
 .container {
-  display: flex;
+  
   padding: 20px 6%;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -157,7 +157,7 @@ a {
 }
 
 /* Sidebar */
-.first-sidebar {
+/*.first-sidebar {
   flex-basis: 25%;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   background: #fff;
@@ -195,7 +195,7 @@ a {
   color: #ff0000;
   font-weight: 500;
   margin: 20px auto 10px;
-}
+}*/
 .team-info-container {
   max-width: 600px;
   margin: 0 auto;
