--- a/app-frontend/src/app/user/user-view/user-view.component.scss
+++ b/app-frontend/src/app/user/user-view/user-view.component.scss
@@ -1,7 +1,9 @@
+
+
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family:'Poppins', sans-serif;
   box-sizing: border-box;
 }
 
@@ -133,6 +135,11 @@ a {
 .profile-details p {
   font-size: 16px;
   color: #555;
+  margin-top: 5px;
+}
+
+.team-details {
+  margin-top: 10px;
 }
 
 .profile-actions {
@@ -148,6 +155,8 @@ a {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .profile-actions .btn:hover {
