--- a/app-frontend/src/app/main-page/main-page.component.html
+++ b/app-frontend/src/app/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar-left">
-    <a href="main-page.component.html" class="logo"><img src="/images/logo.png"></a>
+    <a class="logo"><img src="/images/logo.png"></a>
 
   </div>
   <div class="navbar-center">
