--- a/app-frontend/src/app/project/project-add/project-add.component.html
+++ b/app-frontend/src/app/project/project-add/project-add.component.html
@@ -6,14 +6,14 @@
     <ul>
       <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
       <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
-      <li><a (click)="verifyPP()"><img src="/images/jobs.png"> <span>Create a Project</span></a></li>
-      <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Your comments</span></a></li>
+      <li><a (click)="verifyPP()"><img src="/images/jobs.png"> <span>Projects</span></a></li>
+      <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Comments</span></a></li>
       <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
     </ul>
   </div>
   <div class="navbar-right">
     <div class="user-structure">
-      <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['user-view']" alt="Profile">
+      <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['/user-view']" alt="Profile">
     </div>
   </div>
 </nav>
@@ -28,17 +28,12 @@
           <input type="text" id="project-name" placeholder="Wpisz nazwę projektu">
         </div>
         <div class="form-group">
-          <label for="project-description">Opis projektu</label>
-          <textarea id="project-description" placeholder="Wpisz opis projektu"></textarea>
-        </div>
-        <div class="form-group">
           <label for="project-deadline">Deadline</label>
           <input type="date" id="project-deadline">
         </div>
         <div class="form-group">
           <label for="project-teams">Wybierz zespół</label>
           <select id="project-teams">
-            <option value="">Wybierz zespół</option>
             <option value="team1">Zespół 1</option>
             <option value="team2">Zespół 2</option>
             <option value="team3">Zespół 3</option>
