--- a/app-frontend/src/app/user/user-add/user-add.component.html
+++ b/app-frontend/src/app/user/user-add/user-add.component.html
@@ -6,14 +6,14 @@
     <ul>
       <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
       <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
-      <li><a (click)="verifyPP()"><img src="/images/jobs.png"> <span>Create a Project</span></a></li>
-      <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Your comments</span></a></li>
+      <li><a (click)="verifyPP()"><img src="/images/jobs.png"> <span>Projects</span></a></li>
+      <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Comments</span></a></li>
       <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
     </ul>
   </div>
   <div class="navbar-right">
     <div class="user-structure">
-      <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['user-view']" alt="Profile">
+      <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['/user-view']" alt="Profile">
     </div>
   </div>
 </nav>
@@ -41,7 +41,11 @@
         </div>
         <div class="form-group">
           <label for="user-rank">Rank</label>
-          <input [(ngModel)]="addRank" [ngModelOptions]="{standalone: true}" type="text" id="user-rank" placeholder="Your Rank" value="Jan Kowalski">
+          <select id="user-rank" [(ngModel)]="addRank" [ngModelOptions]="{standalone: true}">
+            <option value="programmer">Programmer</option>
+            <option value="manager">Manager</option>
+            <option value="admin">Admin</option>
+          </select>
         </div>
         <div class="form-group">
           <button (click)="addUser()" type="submit" class="btn">Add User</button>
@@ -50,4 +54,7 @@
       </form>
     </div>
   </div>
+</div>
+
+<div class="form-group">
 </div>
