--- a/app-frontend/src/app/comment-list/comment-list.component.html
+++ b/app-frontend/src/app/comment-list/comment-list.component.html
@@ -6,7 +6,7 @@
       <ul>
         <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
         <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
-        <li><a (click)="verifyPP()"><img src="/images/jobs.png"> <span>Projects</span></a></li>
+        <li><a [routerLink]="['/project-list']"><img src="/images/jobs.png"> <span>Projects</span></a></li>
         <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Comments</span></a></li>
         <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
       </ul>
