--- a/app-frontend/src/app/team/team-list/team-list.component.html
+++ b/app-frontend/src/app/team/team-list/team-list.component.html
@@ -2,12 +2,12 @@
 
 <nav class="navbar">
   <div class="navbar-left">
-      <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
+      <a [routerLink]="['']" class="logo"><img src="/images/logo.png" alt="Logo"></a>
   </div>
   <div class="navbar-center">
       <ul>
-          <li><a href="#" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
-          <li><a href="#teams"><img src="/images/network.png"> <span>Teams</span></a></li>
+          <li><a href="#" ><img src="/images/home.png"> <span>Home</span></a></li>
+          <li><a href="#teams" class="active-link"><img src="/images/network.png"> <span>Teams</span></a></li>
           <li><a href="#"><img src="/images/jobs.png"> <span>Create a Project</span></a></li>
           <li><a href="#"><img src="/images/message.png"> <span>Your Comments</span></a></li>
           <li><a href="#"><img src="/images/notification.png"> <span>Log in</span></a></li>
