--- a/app-frontend/src/app/comment-list/comment-list.component.html
+++ b/app-frontend/src/app/comment-list/comment-list.component.html
@@ -1,7 +1,7 @@
 <p>comment-list works!</p>
 <!--<nav class="navbar">
   <div class="navbar-left">
-    <a href="main-page.component.html" class="logo"><img src="/images/logo.png"></a>
+    <a [routerLink]="['']" class="logo"><img src="/images/logo.png"></a>
 
   </div>
   <div class="navbar-center">
