--- a/app-frontend/src/app/project/project-add/project-add.component.html
+++ b/app-frontend/src/app/project/project-add/project-add.component.html
@@ -1,13 +1,13 @@
 
 <nav class="navbar">
   <div class="navbar-left">
-    <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
+    <a [routerLink]="['']" class="logo"><img src="/images/logo.png" alt="Logo" ></a>
   </div>
   <div class="navbar-center">
     <ul>
-      <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
+      <li><a [routerLink]="['']" ><img src="/images/home.png"> <span>Home</span></a></li>
       <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
-      <li><a (click)="verifyPP()"><img src="/images/jobs.png"> <span>Create a Project</span></a></li>
+      <li><a (click)="verifyPP()" class="active-link"><img src="/images/jobs.png"> <span>Create a Project</span></a></li>
       <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Your comments</span></a></li>
       <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
     </ul>
