--- a/app-frontend/src/app/team/team-add/team-add.component.html
+++ b/app-frontend/src/app/team/team-add/team-add.component.html
@@ -3,7 +3,7 @@
 
 <nav class="navbar">
   <div class="navbar-left">
-    <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
+    <a [routerLink]="['']" class="logo"><img src="/images/logo.png" alt="Logo"></a>
   </div>
   <div class="navbar-center">
     <ul>
