--- a/app-frontend/src/app/team/team-view/team-view.component.html
+++ b/app-frontend/src/app/team/team-view/team-view.component.html
@@ -2,7 +2,7 @@
 <!-- tu będą widoczne informacje o zespole-->
 <nav class="navbar">
   <div class="navbar-left">
-    <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
+    <a [routerLink]="['']" class="logo"><img src="/images/logo.png" alt="Logo"></a>
   </div>
   <div class="navbar-center">
     <ul>
