--- a/app-frontend/src/app/user/user-view/user-view.component.html
+++ b/app-frontend/src/app/user/user-view/user-view.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar-left">
-    <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
+    <a [routerLink]="['']" class="logo"><img src="/images/logo.png" alt="Logo"></a>
   </div>
   <div class="navbar-center">
     <ul>
@@ -11,9 +11,9 @@
       <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
     </ul>
   </div>
-  <div class="navbar-right">
-    <div class="user-structure">
-      <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['user-view']" alt="Profile">
+  <div class="navbar-right" >
+    <div class="user-structure" >
+      <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['user-view']" alt="Profile" >
     </div>
   </div>
 </nav>
