--- a/app-frontend/src/app/comment-list/comment-list.component.html
+++ b/app-frontend/src/app/comment-list/comment-list.component.html
@@ -4,10 +4,10 @@
     </div>
     <div class="navbar-center">
       <ul>
-        <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
+        <li><a [routerLink]="['']" ><img src="/images/home.png"> <span>Home</span></a></li>
         <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
         <li><a [routerLink]="['/project-list']"><img src="/images/jobs.png"> <span>Projects</span></a></li>
-        <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Comments</span></a></li>
+        <li><a [routerLink]="['/comment-list']" class="active-link"><img src="/images/message.png"> <span>Comments</span></a></li>
         <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
       </ul>
     </div>
@@ -21,6 +21,10 @@
 <div class="container">
     <div class="main">
         <h1>All Comments</h1>
+        <div class="profile-actions">
+          <a  class="btn">Edit Profile</a>
+          <a  class="btn">Delete Profile</a>
+        </div>
         <div class="team-list" id="teams">
             <div class="team" *ngFor="let comment of commentData" [routerLink]="[`/task-view/${comment.task.id}`]">
                 <h2>{{comment.user.name}}</h2>
@@ -29,5 +33,6 @@
                 </ul>
             </div>
         </div>
+       
     </div>
   </div>
