--- a/app-frontend/src/app/project/project-add/project-add.component.html
+++ b/app-frontend/src/app/project/project-add/project-add.component.html
@@ -21,30 +21,29 @@
 <div class="container">
   <div class="main">
     <div class="form-container">
-      <h1>Dodaj Nowy Projekt</h1>
+      <h1>Add new Project</h1>
       <form>
         <div class="form-group">
-          <label for="project-name">Nazwa projektu</label>
-          <input type="text" id="project-name" placeholder="Wpisz nazwę projektu">
+          <label for="project-name">Project Name</label>
+          <input [(ngModel)]="addName" [ngModelOptions]="{standalone: true}" type="text" id="project-name" placeholder="Type in Project name">
         </div>
         <div class="form-group">
           <label for="project-deadline">Deadline</label>
-          <input type="date" id="project-deadline">
+          <input [(ngModel)]="addDeadline" [ngModelOptions]="{standalone: true}" type="date" id="project-deadline">
         </div>
         <div class="form-group">
-          <label for="project-teams">Wybierz zespół</label>
-          <select id="project-teams">
-            <option value="team1">Zespół 1</option>
-            <option value="team2">Zespół 2</option>
-            <option value="team3">Zespół 3</option>
+          <label for="project-teams">Choose a team</label>
+          <select [(ngModel)]="addTeam" [ngModelOptions]="{standalone: true}" id="project-teams">
+            <option *ngFor="let team of teamData" value='{{team.id}}'>
+              {{team.name}}
+            </option>
           </select>
         </div>
         <div class="form-group">
-          <button type="submit" class="btn">Dodaj projekt</button>
+          <button (click)="addProject()" class="btn">Save Project</button>
+          <p>{{result}}</p>
         </div>
       </form>
     </div>
   </div>
-
-  
 </div>
